--- a/React/ejerciciorickmorty/src/App.css
+++ b/React/ejerciciorickmorty/src/App.css
@@ -13,7 +13,7 @@
   }
 }
 
-.App-header {
+.App-header-dark {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,6 +22,17 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-header-light {
+  background-color: white;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
 }
 
 .App-link {
